# py-oasvalidator

./: .appveyor.yml  .clang-format  .clang-lint-ignore  .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: conda.yml  format.yml  pip.yml  wheels.yml
conda.recipe/: meta.yaml
docs/: Makefile  cmake_example.rst  conf.py  index.rst  make.bat
example/: example.py
include/: oasvalidator_wrapper.hpp
src/: oasvalidator.cpp  oasvalidator_wrapper.cpp
tests/: test.py  test_basic.py
